fix color input on Safari

--- a/style.css
+++ b/style.css
@@ -16,17 +16,16 @@ input[type="radio"] {
   display: none;
 }
 
-input[type="radio"]:checked + label .radio-icon i {
+input[type="radio"]:checked+label .radio-icon i {
   color: black;
 }
 
-input[type="color"] {
-  display: none;
+label[for="color-picker"] {
+  color: #27C36A;
+  position: absolute;
+  left: 30px;
 }
 
-label .color i {
-  color: #27C36A;
-}
 
 label .radio-icon i {
   color: #e5e5e5;
@@ -59,6 +58,7 @@ label .radio-icon i {
     transform: translateX(-20px);
     opacity: 0;
   }
+
   to {
     transform: translateX(0);
     opacity: 1;
@@ -115,21 +115,14 @@ label .radio-icon i {
   font-family: "Font Awesome 5 Free";
 }
 
-#color-selector {
-  display: flex;
-  font-family: "Font Awesome 5 Free";
-}
-
-#color-div {
-  position: absolute;
-  left: 30px;
-}
-
 #color-picker {
   cursor: pointer;
   background: none;
   border: none;
   -webkit-appearance: none;
+  position: absolute;
+  left: 17px;
+  opacity: 0;
 }
 
 #color-picker::-webkit-color-swatch {
@@ -139,6 +132,7 @@ label .radio-icon i {
   background: none;
   border: 2px solid #27C36A;
 }
+
 #light-toggle {
   position: absolute;
   right: 30px;
